5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1642_2730.log
== TEST (2019-04-12 14:33:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")
y = float(input("y: ")


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")
y = float(input("y: ")


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")
y = float(input("y: ")


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")
y = float(input("y: ")


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")
y = float(input("y: ")


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 4
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: ")



if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- ERROR:
File "XXXX", line 7
    if (y > 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:34:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))


if (y > 0):
	print("Superiores")
			
if (y < 0):
	print("Inferiores")
-- EXECUTION TIME:
0.283939
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
